--- a/locales/it-IT/common.json
+++ b/locales/it-IT/common.json
@@ -58,6 +58,7 @@
     },
     "title": "Importa dati"
   },
+  "installPWA": "Installa l'app",
   "lang": {
     "ar": "Arabo",
     "bg-BG": "bulgaro",
