--- a/locales/nl-NL/common.json
+++ b/locales/nl-NL/common.json
@@ -58,6 +58,7 @@
     },
     "title": "Gegevens importeren"
   },
+  "installPWA": "Installeer de app",
   "lang": {
     "ar": "Arabisch",
     "bg-BG": "Bulgaars",
