--- a/locales/tr-TR/common.json
+++ b/locales/tr-TR/common.json
@@ -58,6 +58,7 @@
     },
     "title": "Veri İçe Aktar"
   },
+  "installPWA": "Uygulamayı Yükle",
   "lang": {
     "ar": "Arapça",
     "bg-BG": "Bulgarca",
