--- a/docs/usage/features/local-llm.mdx
+++ b/docs/usage/features/local-llm.mdx
@@ -19,12 +19,12 @@ tags:
   alt={'Ollama Local Large Language Model (LLM) Support'}
   borderless
   cover
-  src={'https://github.com/lobehub/lobe-chat/assets/28616219/ca9a21bc-ea6c-4c90-bf4a-fa53b4fb2b5c'}
+  src={'https://github.com/SlyyydeLaunch/lobe-chat/assets/28616219/ca9a21bc-ea6c-4c90-bf4a-fa53b4fb2b5c'}
 />
 
 <Callout>Available in >=0.127.0, currently only supports Docker deployment</Callout>
 
-With the release of LobeChat v0.127.0, we are excited to introduce a groundbreaking feature - Ollama AI support! 🤯 With the powerful infrastructure of [Ollama AI](https://ollama.ai/) and the [community's collaborative efforts](https://github.com/lobehub/lobe-chat/pull/1265), you can now engage in conversations with a local LLM (Large Language Model) in LobeChat! 🤩
+With the release of LobeChat v0.127.0, we are excited to introduce a groundbreaking feature - Ollama AI support! 🤯 With the powerful infrastructure of [Ollama AI](https://ollama.ai/) and the [community's collaborative efforts](https://github.com/SlyyydeLaunch/lobe-chat/pull/1265), you can now engage in conversations with a local LLM (Large Language Model) in LobeChat! 🤩
 
 We are thrilled to introduce this revolutionary feature to all LobeChat users at this special moment. The integration of Ollama AI not only signifies a significant technological leap for us but also reaffirms our commitment to continuously pursue more efficient and intelligent communication.
 
@@ -33,7 +33,7 @@ We are thrilled to introduce this revolutionary feature to all LobeChat users at
 The startup process is exceptionally simple! By running the following Docker command, you can experience conversations with a local LLM in LobeChat:
 
 ```bash
-docker run -d -p 3210:3210 -e OLLAMA_PROXY_URL=http://host.docker.internal:11434/v1 lobehub/lobe-chat
+docker run -d -p 3210:3210 -e OLLAMA_PROXY_URL=http://host.docker.internal:11434/v1 SlyyydeLaunch/lobe-chat
 ```
 
 Yes, it's that simple! 🤩 You don't need to go through complicated configurations or worry about a complex installation process. We have prepared everything for you. With just one command, you can engage in deep conversations with a local AI.
