--- a/docs/self-hosting/platform/docker-compose.zh-CN.mdx
+++ b/docs/self-hosting/platform/docker-compose.zh-CN.mdx
@@ -13,15 +13,15 @@ tags:
 
 <div style={{display:"flex", gap: 4}}>
 
-[![](https://img.shields.io/docker/v/lobehub/lobe-chat?color=369eff&label=docker&labelColor=black&logo=docker&logoColor=white&style=flat-square)](https://hub.docker.com/r/lobehub/lobe-chat)
+[![](https://img.shields.io/docker/v/SlyyydeLaunch/lobe-chat?color=369eff&label=docker&labelColor=black&logo=docker&logoColor=white&style=flat-square)](https://hub.docker.com/r/SlyyydeLaunch/lobe-chat)
 
-[![](https://img.shields.io/docker/image-size/lobehub/lobe-chat?color=369eff&labelColor=black&style=flat-square)](https://img.shields.io/docker/image-size/lobehub/lobe-chat?color=369eff&labelColor=black&style=flat-square)
+[![](https://img.shields.io/docker/image-size/SlyyydeLaunch/lobe-chat?color=369eff&labelColor=black&style=flat-square)](https://img.shields.io/docker/image-size/SlyyydeLaunch/lobe-chat?color=369eff&labelColor=black&style=flat-square)
 
-[![](https://img.shields.io/docker/pulls/lobehub/lobe-chat?color=45cc11&labelColor=black&style=flat-square)](https://img.shields.io/docker/pulls/lobehub/lobe-chat?color=45cc11&labelColor=black&style=flat-square)
+[![](https://img.shields.io/docker/pulls/SlyyydeLaunch/lobe-chat?color=45cc11&labelColor=black&style=flat-square)](https://img.shields.io/docker/pulls/SlyyydeLaunch/lobe-chat?color=45cc11&labelColor=black&style=flat-square)
 
 </div>
 
-我们提供了 [Docker 镜像](https://hub.docker.com/r/lobehub/lobe-chat) ，供你在自己的私有设备上部署 LobeChat 服务。
+我们提供了 [Docker 镜像](https://hub.docker.com/r/SlyyydeLaunch/lobe-chat) ，供你在自己的私有设备上部署 LobeChat 服务。
 
 <Steps>
 
@@ -58,7 +58,7 @@ version: '3.8'
 
 services:
   lobe-chat:
-    image: lobehub/lobe-chat
+    image: SlyyydeLaunch/lobe-chat
     container_name: lobe-chat
     restart: always
     ports:
@@ -88,7 +88,7 @@ $ docker-compose up -d
 export https_proxy=http://127.0.0.1:7890 http_proxy=http://127.0.0.1:7890 all_proxy=socks5://127.0.0.1:7890
 
 # Pull the latest image and store the output in a variable
-output=$(docker pull lobehub/lobe-chat:latest 2>&1)
+output=$(docker pull SlyyydeLaunch/lobe-chat:latest 2>&1)
 
 # Check if the pull command was executed successfully
 if [ $? -ne 0 ]; then
@@ -96,7 +96,7 @@ exit 1
 fi
 
 # Check if the output contains a specific string
-echo "$output" | grep -q "Image is up to date for lobehub/lobe-chat:latest"
+echo "$output" | grep -q "Image is up to date for SlyyydeLaunch/lobe-chat:latest"
 
 # If the image is already up to date, do nothing
 if [ $? -eq 0 ]; then
@@ -116,10 +116,10 @@ echo "Started: $(docker-compose up)"
 
 # Print the update time and version
 echo "Update time: $(date)"
-echo "Version: $(docker inspect lobehub/lobe-chat:latest | grep 'org.opencontainers.image.version' | awk -F'"' '{print $4}')"
+echo "Version: $(docker inspect SlyyydeLaunch/lobe-chat:latest | grep 'org.opencontainers.image.version' | awk -F'"' '{print $4}')"
 
 # Clean up unused images
-docker images | grep 'lobehub/lobe-chat' | grep -v 'latest' | awk '{print $3}' | xargs -r docker rmi > /dev/null 2>&1
+docker images | grep 'SlyyydeLaunch/lobe-chat' | grep -v 'latest' | awk '{print $3}' | xargs -r docker rmi > /dev/null 2>&1
 echo "Removed old images."
 ```
 
