--- a/docs/self-hosting/platform/docker.mdx
+++ b/docs/self-hosting/platform/docker.mdx
@@ -55,7 +55,7 @@ $ docker run -d -p 3210:3210 \
   -e OPENAI_API_KEY=sk-xxxx \
   -e ACCESS_CODE=lobe66 \
   --name lobe-chat \
-  lobehub/lobe-chat
+  SlyyydeLaunch/lobe-chat
 ```
 
 Command explanation:
@@ -74,7 +74,7 @@ Command explanation:
 <Callout type="warning">
   The official Docker image does not have a password set. It is strongly recommended to add a
   password to enhance security, otherwise you may encounter situations like [My API Key was
-  stolen!!!](https://github.com/lobehub/lobe-chat/issues/1123).
+  stolen!!!](https://github.com/SlyyydeLaunch/lobe-chat/issues/1123).
 </Callout>
 
 <Callout type="important">
@@ -93,7 +93,7 @@ $ docker run -d -p 3210:3210 \
   -e OPENAI_PROXY_URL=https://api-proxy.com/v1 \
   -e ACCESS_CODE=lobe66 \
   --name lobe-chat \
-  lobehub/lobe-chat
+  SlyyydeLaunch/lobe-chat
 ```
 
 ### Crontab Automatic Update Script (Optional)
@@ -119,7 +119,7 @@ Then, you can use the following script to automate the update:
 export https_proxy=http://127.0.0.1:7890 http_proxy=http://127.0.0.1:7890 all_proxy=socks5://127.0.0.1:7890
 
 # Pull the latest image and store the output in a variable
-output=$(docker pull lobehub/lobe-chat:latest 2>&1)
+output=$(docker pull SlyyydeLaunch/lobe-chat:latest 2>&1)
 
 # Check if the pull command was executed successfully
 if [ $? -ne 0 ]; then
@@ -127,7 +127,7 @@ if [ $? -ne 0 ]; then
 fi
 
 # Check if the output contains a specific string
-echo "$output" | grep -q "Image is up to date for lobehub/lobe-chat:latest"
+echo "$output" | grep -q "Image is up to date for SlyyydeLaunch/lobe-chat:latest"
 
 # If the image is already up to date, do nothing
 if [ $? -eq 0 ]; then
@@ -140,14 +140,14 @@ echo "Detected Lobe-Chat update"
 echo "Removed: $(docker rm -f Lobe-Chat)"
 
 # Run the new container
-echo "Started: $(docker run -d --network=host --env-file /path/to/lobe.env --name=Lobe-Chat --restart=always lobehub/lobe-chat)"
+echo "Started: $(docker run -d --network=host --env-file /path/to/lobe.env --name=Lobe-Chat --restart=always SlyyydeLaunch/lobe-chat)"
 
 # Print the update time and version
 echo "Update time: $(date)"
-echo "Version: $(docker inspect lobehub/lobe-chat:latest | grep 'org.opencontainers.image.version' | awk -F'"' '{print $4}')"
+echo "Version: $(docker inspect SlyyydeLaunch/lobe-chat:latest | grep 'org.opencontainers.image.version' | awk -F'"' '{print $4}')"
 
 # Clean up unused images
-docker images | grep 'lobehub/lobe-chat' | grep -v 'latest' | awk '{print $3}' | xargs -r docker rmi > /dev/null 2>&1
+docker images | grep 'SlyyydeLaunch/lobe-chat' | grep -v 'latest' | awk '{print $3}' | xargs -r docker rmi > /dev/null 2>&1
 echo "Removed old images."
 ```
 
@@ -161,9 +161,9 @@ Configure Crontab to execute the script every 5 minutes:
 
 </Steps>
 
-[docker-pulls-link]: https://hub.docker.com/r/lobehub/lobe-chat
-[docker-pulls-shield]: https://img.shields.io/docker/pulls/lobehub/lobe-chat?color=45cc11&labelColor=black&style=flat-square
-[docker-release-link]: https://hub.docker.com/r/lobehub/lobe-chat
-[docker-release-shield]: https://img.shields.io/docker/v/lobehub/lobe-chat?color=369eff&label=docker&labelColor=black&logo=docker&logoColor=white&style=flat-square
-[docker-size-link]: https://hub.docker.com/r/lobehub/lobe-chat
-[docker-size-shield]: https://img.shields.io/docker/image-size/lobehub/lobe-chat?color=369eff&labelColor=black&style=flat-square
+[docker-pulls-link]: https://hub.docker.com/r/SlyyydeLaunch/lobe-chat
+[docker-pulls-shield]: https://img.shields.io/docker/pulls/SlyyydeLaunch/lobe-chat?color=45cc11&labelColor=black&style=flat-square
+[docker-release-link]: https://hub.docker.com/r/SlyyydeLaunch/lobe-chat
+[docker-release-shield]: https://img.shields.io/docker/v/SlyyydeLaunch/lobe-chat?color=369eff&label=docker&labelColor=black&logo=docker&logoColor=white&style=flat-square
+[docker-size-link]: https://hub.docker.com/r/SlyyydeLaunch/lobe-chat
+[docker-size-shield]: https://img.shields.io/docker/image-size/SlyyydeLaunch/lobe-chat?color=369eff&labelColor=black&style=flat-square
