--- a/docs/self-hosting/platform/docker.zh-CN.mdx
+++ b/docs/self-hosting/platform/docker.zh-CN.mdx
@@ -54,7 +54,7 @@ $ docker run -d -p 3210:3210 \
   -e OPENAI_API_KEY=sk-xxxx \
   -e ACCESS_CODE=lobe66 \
   --name lobe-chat \
-  lobehub/lobe-chat
+  SlyyydeLaunch/lobe-chat
 ```
 
 指令说明：
@@ -73,7 +73,7 @@ $ docker run -d -p 3210:3210 \
 
 <Callout type="warning">
   官方 Docker 镜像中未设定密码，强烈建议添加密码以提升安全性，否则你可能会遇到 [My API Key was
-  stolen!!!](https://github.com/lobehub/lobe-chat/issues/1123) 这样的情况
+  stolen!!!](https://github.com/SlyyydeLaunch/lobe-chat/issues/1123) 这样的情况
 </Callout>
 
 <Callout type="important">
@@ -91,7 +91,7 @@ $ docker run -d -p 3210:3210 \
   -e OPENAI_PROXY_URL=https://api-proxy.com/v1 \
   -e ACCESS_CODE=lobe66 \
   --name lobe-chat \
-  lobehub/lobe-chat
+  SlyyydeLaunch/lobe-chat
 ```
 
 ### Crontab 自动更新脚本（可选）
@@ -117,7 +117,7 @@ OPENAI_MODEL_LIST=-gpt-4,-gpt-4-32k,-gpt-3.5-turbo-16k,gpt-3.5-turbo-1106=gpt-3.
 export https_proxy=http://127.0.0.1:7890 http_proxy=http://127.0.0.1:7890 all_proxy=socks5://127.0.0.1:7890
 
 # 拉取最新的镜像并将输出存储在变量中
-output=$(docker pull lobehub/lobe-chat:latest 2>&1)
+output=$(docker pull SlyyydeLaunch/lobe-chat:latest 2>&1)
 
 # 检查拉取命令是否成功执行
 if [ $? -ne 0 ]; then
@@ -125,7 +125,7 @@ if [ $? -ne 0 ]; then
 fi
 
 # 检查输出中是否包含特定的字符串
-echo "$output" | grep -q "Image is up to date for lobehub/lobe-chat:latest"
+echo "$output" | grep -q "Image is up to date for SlyyydeLaunch/lobe-chat:latest"
 
 # 如果镜像已经是最新的，则不执行任何操作
 if [ $? -eq 0 ]; then
@@ -138,14 +138,14 @@ echo "Detected Lobe-Chat update"
 echo "Removed: $(docker rm -f Lobe-Chat)"
 
 # 运行新的容器
-echo "Started: $(docker run -d --network=host --env-file /path/to/lobe.env --name=Lobe-Chat --restart=always lobehub/lobe-chat)"
+echo "Started: $(docker run -d --network=host --env-file /path/to/lobe.env --name=Lobe-Chat --restart=always SlyyydeLaunch/lobe-chat)"
 
 # 打印更新的时间和版本
 echo "Update time: $(date)"
-echo "Version: $(docker inspect lobehub/lobe-chat:latest | grep 'org.opencontainers.image.version' | awk -F'"' '{print $4}')"
+echo "Version: $(docker inspect SlyyydeLaunch/lobe-chat:latest | grep 'org.opencontainers.image.version' | awk -F'"' '{print $4}')"
 
 # 清理不再使用的镜像
-docker images | grep 'lobehub/lobe-chat' | grep -v 'latest' | awk '{print $3}' | xargs -r docker rmi > /dev/null 2>&1
+docker images | grep 'SlyyydeLaunch/lobe-chat' | grep -v 'latest' | awk '{print $3}' | xargs -r docker rmi > /dev/null 2>&1
 echo "Removed old images."
 ```
 
@@ -159,9 +159,9 @@ echo "Removed old images."
 
 </Steps>
 
-[docker-pulls-link]: https://hub.docker.com/r/lobehub/lobe-chat
-[docker-pulls-shield]: https://img.shields.io/docker/pulls/lobehub/lobe-chat?color=45cc11&labelColor=black&style=flat-square
-[docker-release-link]: https://hub.docker.com/r/lobehub/lobe-chat
-[docker-release-shield]: https://img.shields.io/docker/v/lobehub/lobe-chat?color=369eff&label=docker&labelColor=black&logo=docker&logoColor=white&style=flat-square
-[docker-size-link]: https://hub.docker.com/r/lobehub/lobe-chat
-[docker-size-shield]: https://img.shields.io/docker/image-size/lobehub/lobe-chat?color=369eff&labelColor=black&style=flat-square
+[docker-pulls-link]: https://hub.docker.com/r/SlyyydeLaunch/lobe-chat
+[docker-pulls-shield]: https://img.shields.io/docker/pulls/SlyyydeLaunch/lobe-chat?color=45cc11&labelColor=black&style=flat-square
+[docker-release-link]: https://hub.docker.com/r/SlyyydeLaunch/lobe-chat
+[docker-release-shield]: https://img.shields.io/docker/v/SlyyydeLaunch/lobe-chat?color=369eff&label=docker&labelColor=black&logo=docker&logoColor=white&style=flat-square
+[docker-size-link]: https://hub.docker.com/r/SlyyydeLaunch/lobe-chat
+[docker-size-shield]: https://img.shields.io/docker/image-size/SlyyydeLaunch/lobe-chat?color=369eff&labelColor=black&style=flat-square
