--- a/docs/usage/features/plugin-system.mdx
+++ b/docs/usage/features/plugin-system.mdx
@@ -26,7 +26,7 @@ tags:
 
 The plugin ecosystem of LobeChat is an important extension of its core functionality, greatly enhancing the practicality and flexibility of the LobeChat assistant.
 
-<Video src="https://github.com/lobehub/lobe-chat/assets/28616219/f29475a3-f346-4196-a435-41a6373ab9e2" />
+<Video src="https://github.com/SlyyydeLaunch/lobe-chat/assets/28616219/f29475a3-f346-4196-a435-41a6373ab9e2" />
 
 By utilizing plugins, LobeChat assistants can obtain and process real-time information, such as searching for web information and providing users with instant and relevant news.
 
@@ -57,8 +57,8 @@ Learn more about [plugin usage](/en-US/usage/plugins/basic) by checking it out.
 
 - [lobe-chat-plugins][lobe-chat-plugins]: This is the plugin index for LobeChat. It retrieves the list of plugins from the index.json of this repository and displays them to the users.
 - [chat-plugin-template][chat-plugin-template]: Chat Plugin plugin development template, you can quickly create a new plugin project through the project template.
-- [@lobehub/chat-plugin-sdk][chat-plugin-sdk]: The LobeChat plugin SDK can help you create excellent Lobe Chat plugins.
-- [@lobehub/chat-plugins-gateway][chat-plugins-gateway]: The LobeChat plugin gateway is a backend service that serves as the gateway for LobeChat plugins. We deploy this service using Vercel.
+- [@SlyyydeLaunch/chat-plugin-sdk][chat-plugin-sdk]: The LobeChat plugin SDK can help you create excellent Lobe Chat plugins.
+- [@SlyyydeLaunch/chat-plugins-gateway][chat-plugins-gateway]: The LobeChat plugin gateway is a backend service that serves as the gateway for LobeChat plugins. We deploy this service using Vercel.
 
 ### Roadmap Progress
 
@@ -67,23 +67,23 @@ The plugin system of LobeChat has now entered a stable stage, and we have basica
 <Steps>
   ### ✅ Phase One of Plugins
 
-Implementing the separation of plugins from the main body, splitting the plugins into independent repositories for maintenance, and implementing dynamic loading of plugins. [**#73**](https://github.com/lobehub/lobe-chat/issues/73)
+Implementing the separation of plugins from the main body, splitting the plugins into independent repositories for maintenance, and implementing dynamic loading of plugins. [**#73**](https://github.com/SlyyydeLaunch/lobe-chat/issues/73)
 
 ### ✅ Phase Two of Plugins
 
-The security and stability of plugin usage, more accurate presentation of abnormal states, maintainability and developer-friendliness of the plugin architecture. [**#97**](https://github.com/lobehub/lobe-chat/issues/97)
+The security and stability of plugin usage, more accurate presentation of abnormal states, maintainability and developer-friendliness of the plugin architecture. [**#97**](https://github.com/SlyyydeLaunch/lobe-chat/issues/97)
 
 ### ✅ Phase Three of Plugins
 
-Higher-level and improved customization capabilities, support for OpenAPI schema invocation, compatibility with ChatGPT plugins, and the addition of Midjourney plugins. [**#411**](https://github.com/lobehub/lobe-chat/discussions/#411)
+Higher-level and improved customization capabilities, support for OpenAPI schema invocation, compatibility with ChatGPT plugins, and the addition of Midjourney plugins. [**#411**](https://github.com/SlyyydeLaunch/lobe-chat/discussions/#411)
 
 ### 💭 Phase Four of Plugins
 
-Comprehensive authentication, visual configuration of plugin definitions, Plugin SDK CLI, Python language development template, any other ideas? Join the discussion: [**#1310**](https://github.com/lobehub/lobe-chat/discussions/#1310)
+Comprehensive authentication, visual configuration of plugin definitions, Plugin SDK CLI, Python language development template, any other ideas? Join the discussion: [**#1310**](https://github.com/SlyyydeLaunch/lobe-chat/discussions/#1310)
 
 </Steps>
 
-[chat-plugin-sdk]: https://github.com/lobehub/chat-plugin-sdk
-[chat-plugin-template]: https://github.com/lobehub/chat-plugin-template
-[chat-plugins-gateway]: https://github.com/lobehub/chat-plugins-gateway
-[lobe-chat-plugins]: https://github.com/lobehub/lobe-chat-plugins
+[chat-plugin-sdk]: https://github.com/SlyyydeLaunch/chat-plugin-sdk
+[chat-plugin-template]: https://github.com/SlyyydeLaunch/chat-plugin-template
+[chat-plugins-gateway]: https://github.com/SlyyydeLaunch/chat-plugins-gateway
+[lobe-chat-plugins]: https://github.com/SlyyydeLaunch/lobe-chat-plugins
