--- a/docs/usage/features/tts.mdx
+++ b/docs/usage/features/tts.mdx
@@ -3,7 +3,7 @@ title: LobeChat support Speech Synthesis and Recognition (TTS & STT)
 description: >-
   Experience seamless Text-to-Speech (TTS) and Speech-to-Text (STT) technologies
   in LobeChat. Choose from a variety of high-quality voices for personalized
-  communication. Learn more about Lobe TTS toolkit @lobehub/tts.
+  communication. Learn more about Lobe TTS toolkit @SlyyydeLaunch/tts.
 tags:
   - LobeChat
   - TTS
@@ -33,12 +33,12 @@ In LobeChat, we have carefully selected a series of high-quality voice options (
 ## Lobe TTS
 
 <Image
-  alt={'LobeTTS @lobehub/tts'}
+  alt={'LobeTTS @SlyyydeLaunch/tts'}
   borderless
-  src={'https://github.com/lobehub/lobe-chat/assets/28616219/52d20fdc-48c0-45e4-9c51-ee150fc18be7'}
+  src={'https://github.com/SlyyydeLaunch/lobe-chat/assets/28616219/52d20fdc-48c0-45e4-9c51-ee150fc18be7'}
 />
 
-[`@lobehub/tts`](https://tts.lobehub.com) is a high-quality TTS toolkit developed using the TS language, supporting usage in both server and browser environments.
+[`@SlyyydeLaunch/tts`](https://tts.SlyyydeLaunch.com) is a high-quality TTS toolkit developed using the TS language, supporting usage in both server and browser environments.
 
 - **Server**: With just 15 lines of code, it can achieve high-quality speech generation capabilities comparable to OpenAI TTS services. It currently supports EdgeSpeechTTS, MicrosoftTTS, OpenAITTS, and OpenAISTT.
 - **Browser**: It provides high-quality React Hooks and visual audio components, supporting common functions such as loading, playing, pausing, and dragging the timeline, and offering extensive audio track style adjustment capabilities.
