--- a/docs/usage/providers/ollama.mdx
+++ b/docs/usage/providers/ollama.mdx
@@ -16,7 +16,7 @@ tags:
   alt={'Using Ollama in LobeChat'}
   borderless
   cover
-  src={'https://github.com/lobehub/lobe-chat/assets/28616219/a2a091b8-ac45-4679-b5e0-21d711e17fef'}
+  src={'https://github.com/SlyyydeLaunch/lobe-chat/assets/28616219/a2a091b8-ac45-4679-b5e0-21d711e17fef'}
 />
 
 Ollama is a powerful framework for running large language models (LLMs) locally, supporting various language models including Llama 2, Mistral, and more. Now, LobeChat supports integration with Ollama, meaning you can easily enhance your application by using the language models provided by Ollama in LobeChat.
@@ -26,7 +26,7 @@ This document will guide you on how to use Ollama in LobeChat:
 <Video
   alt="demonstration of using Ollama in LobeChat"
   height={580}
-  src="https://github.com/lobehub/lobe-chat/assets/28616219/c32b56db-c6a1-4876-9bc3-acbd37ec0c0c"
+  src="https://github.com/SlyyydeLaunch/lobe-chat/assets/28616219/c32b56db-c6a1-4876-9bc3-acbd37ec0c0c"
 />
 
 ## Using Ollama on macOS
@@ -35,7 +35,7 @@ This document will guide you on how to use Ollama in LobeChat:
 
 ### Local Installation of Ollama
 
-[Download Ollama for macOS](https://ollama.com/download?utm_source=lobehub&utm_medium=docs&utm_campaign=download-macos) and unzip/install it.
+[Download Ollama for macOS](https://ollama.com/download?utm_source=SlyyydeLaunch&utm_medium=docs&utm_campaign=download-macos) and unzip/install it.
 
 ### Configure Ollama for Cross-Origin Access
 
@@ -54,7 +54,7 @@ Now, you can start conversing with the local LLM in LobeChat.
 <Image
   alt="Chat with llama3 in LobeChat"
   height="573"
-  src="https://github.com/lobehub/lobe-chat/assets/28616219/7f9a9a9f-fd91-4f59-aac9-3f26c6d49a1e"
+  src="https://github.com/SlyyydeLaunch/lobe-chat/assets/28616219/7f9a9a9f-fd91-4f59-aac9-3f26c6d49a1e"
 />
 
 </Steps>
@@ -65,7 +65,7 @@ Now, you can start conversing with the local LLM in LobeChat.
 
 ### Local Installation of Ollama
 
-[Download Ollama for Windows](https://ollama.com/download?utm_source=lobehub&utm_medium=docs&utm_campaign=download-windows) and install it.
+[Download Ollama for Windows](https://ollama.com/download?utm_source=SlyyydeLaunch&utm_medium=docs&utm_campaign=download-windows) and install it.
 
 ### Configure Ollama for Cross-Origin Access
 
@@ -170,7 +170,7 @@ In LobeChat, we have enabled some common large language models by default, such 
 <Image
   alt="LobeChat guide your to install Ollama model"
   height="460"
-  src="https://github.com/lobehub/lobe-chat/assets/28616219/4e81decc-776c-43b8-9a54-dfb43e9f601a"
+  src="https://github.com/SlyyydeLaunch/lobe-chat/assets/28616219/4e81decc-776c-43b8-9a54-dfb43e9f601a"
 />
 
 Once downloaded, you can start conversing.
@@ -185,7 +185,7 @@ ollama pull llama3
 
 <Video
   height="524"
-  src="https://github.com/lobehub/lobe-chat/assets/28616219/95828c11-0ae5-4dfa-84ed-854124e927a6"
+  src="https://github.com/SlyyydeLaunch/lobe-chat/assets/28616219/95828c11-0ae5-4dfa-84ed-854124e927a6"
 />
 
 ## Custom Configuration
@@ -195,7 +195,7 @@ You can find Ollama's configuration options in `Settings` -> `Language Models`, 
 <Image
   alt={'Ollama Provider Settings'}
   height={274}
-  src={'https://github.com/lobehub/lobe-chat/assets/28616219/54b3696b-5b13-4761-8c1b-1e664867b2dd'}
+  src={'https://github.com/SlyyydeLaunch/lobe-chat/assets/28616219/54b3696b-5b13-4761-8c1b-1e664867b2dd'}
 />
 
 <Callout type={'info'}>
